--- a/src/main/resources/patagonia/view/Finalizacion.fxml
+++ b/src/main/resources/patagonia/view/Finalizacion.fxml
@@ -7,10 +7,10 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: radial-gradient(center 50% 50%, radius 100%, #2ecc71, #004d40);" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="patagonia.controller.FinalizacionController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="900.0" style="-fx-background-color: linear-gradient(to bottom, #009688, #004d40, #00251a);" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="patagonia.controller.FinalizacionController">
    <children>
       
-      <Label alignment="CENTER" layoutX="100.0" layoutY="120.0" prefHeight="50.0" prefWidth="400.0" text="¡Operación Exitosa!" textFill="WHITE">
+      <Label alignment="CENTER" layoutX="263.0" layoutY="170.0" prefHeight="50.0" prefWidth="400.0" text="¡Operación Exitosa!" textFill="WHITE">
          <font>
             <Font name="System Bold" size="36.0" />
          </font>
@@ -19,13 +19,13 @@
          </effect>
       </Label>
 
-      <Label fx:id="lblMensaje" alignment="CENTER" layoutX="50.0" layoutY="180.0" prefHeight="30.0" prefWidth="500.0" text="Los datos se han guardado correctamente." textFill="#e0f2f1">
+      <Label fx:id="lblMensaje" alignment="CENTER" layoutX="213.0" layoutY="270.0" prefHeight="30.0" prefWidth="500.0" text="Los datos se han guardado correctamente." textFill="#e0f2f1">
          <font>
             <Font name="Times New Roman" size="18.0" />
          </font>
       </Label>
 
-      <Button fx:id="btnRegresar" defaultButton="true" layoutX="175.0" layoutY="280.0" mnemonicParsing="false" onAction="#volverMenuPrincipal" prefHeight="50.0" prefWidth="250.0" style="-fx-background-color: black; -fx-text-fill: white; -fx-background-radius: 15; -fx-border-color: #2ecc71; -fx-border-radius: 15; -fx-border-width: 2;" text="Volver al Menú">
+      <Button fx:id="btnRegresar" defaultButton="true" layoutX="338.0" layoutY="420.0" mnemonicParsing="false" onAction="#volverMenuPrincipal" prefHeight="50.0" prefWidth="250.0" style="-fx-background-color: black; -fx-text-fill: white; -fx-background-radius: 15; -fx-border-color: #2ecc71; -fx-border-radius: 15; -fx-border-width: 2;" text="Volver al Menú">
          <font>
             <Font name="System Bold" size="18.0" />
          </font>
